# ptestgen

./: README.md  main.py  pyproject.toml  requirements.txt  sync_task.py
.github/workflows/: release.yml
autotestia/: artifacts.py  pipeline.py  schemas.py
ptestgen/: artifacts.py  config.py  correct.py  correct_online.py  evaluate.py  merge.py  pexams_converter.py  pipeline.py  schemas.py  shuffle.py  split.py
ptestgen/agents/: base.py  evaluator.py  generator.py  reviewer.py
ptestgen/input_parser/: parser.py
ptestgen/llm_providers/: __init__.py  anthropic.py  base.py  google.py  openai_compatible.py
tests/: test_correct.py  test_correct_online.py  test_generation_resilience.py  test_input_parser_markdown.py  test_llm_online.py  test_mixed_questions.py
