[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ptestgen"
version = "0.2.2"
authors = [
  { name="PTestGen Team (Oscar)", email="oscar.pellicer@uv.es" },
]
description = "AI-powered tool for generating test questions, quizzes, rubrics, and exam exports."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0",
    "google-generativeai>=0.4.0",
    "anthropic>=0.20.0",
    "replicate>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "striprtf>=0.0.26",
    "Pillow>=10.0.0",
    "levenshtein>=0.20.0",
    "pandas>=2.0.0",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
    "unidecode>=1.0.0",
    "pdf2image>=1.16.0",
    "opencv-python>=4.7.0",
    "tqdm>=4.62.0",
    "pexams>=0.12.0",
    "pevaluate>=0.1.7",
    "openpyxl>=3.0.0",
]

[tool.pytest.ini_options]
markers = [
    "llm: tests that call a real LLM provider and may burn API credits",
]

[project.urls]
Homepage = "https://github.com/OscarPellicer/ptestgen"

[project.scripts]
ptestgen = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ptestgen*"]

[tool.setuptools.package-data]
ptestgen = ["media/image.jpg"]

[tool.setuptools]
py-modules = ["main"]

